<resources>
    <string name="app_name">Luandry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Laundry</string>
    <string name="nav_header_subtitle">Laundry.store@Laundry.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title">Name of agency</string>
    <string name="sub_title">497 Evergreen Rd.</string>
    <!--gender-->
    <string-array name="arr_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!--notify-->
    <string name="notify_successfully_saved">Your information has been saved</string>
    <string name="notify_fail">Something went wrong\nPlease check!</string>
    <string name="notify_lost_connection">Lost the connection\nPlease check!</string>
    <string name="notify_loading">Loading...</string>
    <string name="notify_cant_choose">Not available</string>
    <string name="btn_ok">OK</string>
    <string name="btn_fail">FAIL</string>

    <!--input hint-->
    <string name="input_user_name">User name</string>
    <string name="input_your_name">Your name</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_date">dd / mm / yyyy</string>
    <string name="input_location">Your address</string>
    <string name="input_gender">Your gender</string>
    <!--login/sign up-->
    <string name="btn_login">LOGIN</string>
    <string name="login_create">Create a new account?</string>
    <string name="sign_up_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="yout_info">Your information</string>
    <string name="login">Login</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_finish">Finish</string>
    <string name="service">Service</string>
    <string name="title_service">Name of the service</string>
    <string name="service_sub_title">Short description</string>
    <string name="promotion">Promotion</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="my_order">My order</string>
    <string name="history">History</string>
    <string name="pricing">Pricing</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="input_time_pick_up">Time pick up</string>
    <string name="input_time_draff_off">Time draff off</string>
    <string name="yout_order">Your Order</string>
    <string name="title_category">Category 1</string>
    <string name="category_price">VND 10.000</string>
    <string name="input_material">Material (Optional)</string>
    <string name="input_production">Production (Optional)</string>
    <string name="input_note">Note</string>
    <string name="input_color">Color</string>
    <string name="input_number">1</string>
    <string name="notify_choose_more">Please choose more than 0</string>
    <string name="category">All Categories</string>
    <string name="input_location_pickup">Pick up place</string>
    <string name="input_location_dropoff">Drop off place</string>
    <string name="title_your_address">Hi, John Doe</string>
    <string name="TimePickDraff">Schedule</string>
    <string name="date_time_pick_up">Pick up</string>
    <string name="date_time_drop_off">Date delivery</string>
    <string name="input_location_customer">Who takes this order?</string>
    <string name="input_location_contact">Your phone number</string>
    <string name="payment">Payment</string>
    <string name="cash_payment">Money cash</string>
    <string name="title_choose_service">Choose service you want</string>
    <string name="title_choose_payment">Choose payment you want</string>
    <string name="amount">Amount</string>
    <string name="total">Total: </string>
    <string name="delivery">Delivery</string>
    <string name="input_promotion">Enter your promotion</string>
    <string name="title_all_your_clothes">All your clothes here</string>
    <string name="confirm">Confirm</string>

    <string name="succefful_order">Your order have been saved</string>
    <string name="thanks">Thank you!!!</string>
    <string name="your_code">Above is your order\'s QR Code</string>
    <string name="back_to_home">Back to home</string>
    <string name="checkout">Check out</string>
    <string name="total_items">Your Items: </string>
    <string name="add_more">Add more</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
