<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_user_profile"

            android:title="@string/user_profile" />
        <item
            android:id="@+id/nav_my_order"

            android:title="@string/my_order" />
        <item
            android:id="@+id/nav_history"

            android:title="@string/history" />
        <item
            android:id="@+id/nav_pricing"

            android:title="@string/pricing" />
        <item
            android:id="@+id/nav_help"

            android:title="@string/help" />
        <item
            android:id="@+id/nav_log_out"

            android:title="@string/log_out" />
    </group>


</menu>
