<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_production"
        android:drawablePadding="@dimen/input_drawable_padding"
        android:hint="@string/input_production"
        android:textSize="@dimen/font_size_input"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        android:id="@+id/item_prepare_order_production"
        android:background="@drawable/bg_input"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="2">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_material"
            android:layout_marginRight="5dp"
            android:drawablePadding="@dimen/input_drawable_padding"
            android:hint="@string/input_material"
            android:textSize="@dimen/font_size_input"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:id="@+id/item_prepare_order_material"
            android:background="@drawable/bg_input"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_color"
            android:drawablePadding="@dimen/input_drawable_padding"
            android:hint="@string/input_color"
            android:textSize="@dimen/font_size_input"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:id="@+id/item_prepare_order_color"
            android:background="@drawable/bg_input"/>

    </LinearLayout>
    <include
        layout="@layout/number_picker"></include>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_note"
        android:drawablePadding="@dimen/input_drawable_padding"
        android:hint="@string/input_note"
        android:textSize="@dimen/font_size_input"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        android:id="@+id/item_prepare_order_note"
        android:background="@drawable/bg_input"/>



</LinearLayout>