<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgWhite"
    tools:context=".InforOrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/yout_order"
                android:autoSizeTextType="uniform"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/font_size_header"
                android:layout_margin="@dimen/margin_item"
                android:textColor="@color/textColorHeader"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/input_drawable_padding"
                android:hint="@string/input_your_name"
                android:textSize="@dimen/font_size_input"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColorHint"
                android:id="@+id/infor_order_edt_user_name"
                android:background="@drawable/bg_input"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_calendar"
                android:drawablePadding="@dimen/input_drawable_padding"
                android:hint="@string/input_time_pick_up"
                android:inputType="date"
                android:onClick="processChooseTimePickup"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:textColorHint="@color/textColorHint"
                android:textSize="@dimen/font_size_input"
                android:textColor="@color/textColor"
                android:id="@+id/infor_order_edt_time_pick_up"
                android:background="@drawable/bg_input"
                tools:ignore="OnClick" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_calendar"
                android:drawablePadding="@dimen/input_drawable_padding"
                android:hint="@string/input_time_draff_off"
                android:inputType="date"
                android:onClick="processChooseTimeDraffOff"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:textColorHint="@color/textColorHint"
                android:textSize="@dimen/font_size_input"
                android:textColor="@color/textColor"
                android:id="@+id/infor_order_edt_time_draff_of"
                android:background="@drawable/bg_input"
                tools:ignore="OnClick" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="@dimen/input_drawable_padding"
                android:hint="@string/input_location"
                android:inputType="text"
                android:textColorHint="@color/textColorHint"
                android:textSize="@dimen/font_size_input"
                android:textColor="@color/textColor"
                android:id="@+id/infor_order_edt_address"
                android:background="@drawable/bg_input"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_finish"
                android:translationZ="4dp"
                android:elevation="10dp"
                android:layout_marginVertical="20dp"
                android:onClick="processFinish"
                android:layout_margin="@dimen/margin_item"
                android:textColor="@color/textColorBtn"
                android:textSize="@dimen/font_size_btn"
                android:id="@+id/btn_infor_order_finish"
                android:background="@drawable/btn_bg"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>