<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme.FullScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_blue"
    android:layout_gravity="center_vertical"
    tools:context=".SignUp.SignUpActivity">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/card_margin"
        app:cardElevation="@dimen/card_elevation"
        android:layout_gravity="center_vertical"
        app:cardCornerRadius="@dimen/card_radius"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/font_size_header"
                android:layout_margin="@dimen/margin_item"
                android:textColor="@color/textColorHeader"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/input_drawable_padding"
                android:hint="@string/input_your_name"
                android:textSize="@dimen/font_size_input"
                android:cursorVisible="false"
                android:focusable="true"
                android:inputType="textPersonName"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColorHint"
                android:id="@+id/sign_up_edt_user_name"
                android:background="@drawable/bg_input"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/input_drawable_padding"
                android:hint="@string/input_email"
                android:textSize="@dimen/font_size_input"
                android:textColor="@color/textColor"
                android:focusable="true"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/textColorHint"
                android:id="@+id/sign_up_edt_email"
                android:background="@drawable/bg_input"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/input_drawable_padding"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:focusable="true"
                android:textColorHint="@color/textColorHint"
                android:textSize="@dimen/font_size_input"
                android:textColor="@color/textColor"
                android:id="@+id/sign_up_edt_user_password"
                android:background="@drawable/bg_input"/>
            <android.support.design.widget.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="@dimen/card_elevation"
                android:layout_marginVertical="20dp"
                app:fabSize="normal"
                android:src="@drawable/ic_arrow_forward"
                android:layout_margin="@dimen/margin_item"
                android:id="@+id/sign_up_btn_continue"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="@dimen/margin_item"
                android:text="@string/sign_up_have_account"
                android:textColor="@color/textColor"
                android:textSize="@dimen/font_size_text"
                android:onClick="processBackLogin"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:translationZ="4dp"
                android:elevation="10dp"
                android:layout_marginVertical="20dp"
                android:onClick="processBackLogin"
                android:layout_margin="@dimen/margin_item"
                android:textColor="@color/textColorBtn"
                android:textSize="@dimen/font_size_btn"
                android:id="@+id/sign_up_btn_login"
                android:background="@drawable/btn_bg"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>